最终修复：修正basePath和添加缺失配置

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
-{
+﻿{
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "export": "next build && next export",
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
