--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "雕版印刷 - 传承千年的技艺",
-  "short_name": "雕版印刷",
+  "name": "刻不容缓 - 传承千年的技艺",
+  "short_name": "刻不容缓",
   "description": "体验中国传统雕版印刷工艺互动游戏",
   "start_url": "/",
   "display": "standalone",
